[project]
name = "langchain-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=0.3.26",
    "langchain-ollama>=0.3.3",
    "langgraph>=0.5.1",
    "pillow>=11.3.0",
    "pydantic>=2.11.7",
    "starlette>=0.47.1",
    "typing>=3.10.0.0",
]

[tool.pyright]
venvPath = "."
venv = ".venv"


